<resources>
    <string name="app_name">CineAI</string>
    <string name="movie_image">Movie Image</string>
    <string name="def_movie_deadpool">Deadpool</string>
    <string name="error">Error</string>
    <string name="error_dialog">Error: %1$s</string>
    <string name="ok">OK</string>
    <string name="movie_star">Movie Star</string>
    <string name="def_movie_star">5.0</string>
    <string name="def_movie_overview">The\n Ama\nzing\n Movie</string>
    <string name="overview">Overview :</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="app_slogan">Discover Your Next Favorite Movie with AI-Driven Recommendations!</string>
    <string name="register_slogan">Sign Up Now and Dive into the \n Ultimate Movie Experience!</string>
    <string name="def_user_name">JohnDoe35</string>
    <string name="user_name">User Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="def_email">john_doe@example.com</string>
    <string name="john_america123">John.America123</string>
    <string name="login_slogan">Log In Now!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username_characters_error">Username must be at least 3 characters</string>
    <string name="invalid_email_error">Invalid email address</string>
    <string name="password_characters_error">Password must be at least 6 characters</string>
    <string name="username_already_error">Username already taken</string>
    <string name="error_checking_username">Error checking username</string>
    <string name="registration_error">Registration Failed</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="error_saving_user_data">Error saving user data: %1$s</string>
    <string name="invalid_input">Invalid input</string>
    <string name="login_successful">Login successful</string>
    <string name="login_error">Login Error</string>
    <string name="password_reset_sent_successfully">Password reset email sent successfully</string>
    <string name="error_send">Error: %1$s</string>
    <string name="send">Send</string>
    <string name="forgot_password_context">Enter your registered email…\nCheck your inbox for a link to reset your password.</string>
    <string name="please_enter_your_email">Please enter your email!</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="introduce_yourself">Introduce Yourself…</string>
    <string name="we_need_this_information">Why do we need this information? To analyze your character and use AI to recommend the best movies for you. Rest assured, your data is safe with us.</string>
    <string name="how_do_you_relax_in_stressful_situations">How do you relax in stressful situations?</string>
    <string name="stress_default">e.g., Exercising, Socializing, Reading</string>
    <string name="how_do_you_usually_solve_problems">How do you usually solve problems?</string>
    <string name="problem_solving_default">e.g., Making a plan, Researching information, Asking for advice</string>
    <string name="do_you_make_decisions_quickly_or_thoroughly">Do you make decisions quickly or take your time to think things through?</string>
    <string name="decision_making_default">e.g., Quickly, Thoroughly, A mix of both</string>
    <string name="do_you_prefer_leader_or_team_member">Do you prefer to be a leader or a team member in group work?</string>
    <string name="teamwork_default">e.g., Leader, Team Member, Independent</string>
    <string name="what_movie_genres_do_you_enjoy">What movie genres do you enjoy?</string>
    <string name="movie_genres_default">e.g., Action, Comedy, Sci-Fi</string>
    <string name="what_types_of_music_do_you_like">What types of music do you like to listen to?</string>
    <string name="music_default">e.g., HipHop, Rock, Pop</string>
    <string name="what_do_you_enjoy_doing_in_free_time">What do you enjoy doing in your free time?</string>
    <string name="hobbies_default">e.g., Playing games, Coding, Exercising</string>
    <string name="what_types_of_places_do_you_like_to_visit">What types of places do you like to visit when you travel?</string>
    <string name="travel_default">e.g., Nature, Historical sites, Beaches</string>
    <string name="save">Save</string>
    <string name="profile_setup_successful">Profile successfully saved!</string>
    <string name="error_saving_profile_data">An error occurred while saving profile data. Please try again.</string>
    <string name="all_fields_required">All fields are required!</string>
    <string name="profile_missing">Profile information is missing. You will be redirected to complete your profile…</string>
    <string name="error_checking_profile">An error occurred while checking profile information.</string>
    <string name="ai">AI</string>
    <string name="error_fetching_profile">Error fetching profile data.</string>
    <string name="no_recommendations">No recommendations found.</string>
    <string name="error_generating_recommendations">Error generating recommendations.</string>
    <string name="ai_logo">AI Logo</string>
    <string name="gemini">Gemini</string>
    <string name="ai_slogan">Our AI has picked some awesome movies just for you!\nDive in and find your next favorite film.🎬✨</string>
    <string name="create_recommendation">Create Recommendation</string>
    <string name="movie_board">Movie Board</string>
    <string name="hey">Hey!</string>
    <string name="recommendation">Recommendation:</string>
    <string name="data_info">ⓘ Your data is safe—used only for movie picks!</string>
    <string name="min_3_characters">ⓘ Minimum 3 characters!</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="comedy">Comedy</string>
    <string name="def_date">2009/06/02</string>
    <string name="released">Released</string>
    <string name="trailer">Trailer :</string>
    <string name="christian_bale">Christian Bale</string>
    <string name="bruce_wayne">Bruce Wayne</string>
    <string name="characters">Characters :</string>
    <string name="error_fetching_character">Error fetching character!</string>
    <string name="error_fetching_video">Error fetching video!</string>
    <string name="error_fetching_details">Error fetching movie details!</string>
    <string name="error_loading_favorite">Error loading favorite movies!</string>
    <string name="back">back</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="successfully_signed_out">Successfully signed out…</string>
    <string name="successfully_deleted_account">Successfully Deleted Account…</string>
    <string name="failed_to_delete_account">Failed to delete account</string>
    <string name="trailer_video">Trailer Video</string>
    <string name="error_fetching_thumbnail">Error fetching thumbnail</string>
    <string name="app_logo">App Logo</string>
    <string name="error_fetching_movie_backdrops">Error fetching movie backdrops</string>
    <string name="error_updating_favorite">Error updating favorite movie</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="change_profile">Change Profile</string>
    <string name="profile_data_not_found">Profile data not found</string>
    <string name="error_loading_profile_data">Error loading profile data</string>
    <string name="search">Search</string>
    <string name="no_data">No Data</string>
    <string name="no_data_long">We can\'t see any movies here,\n let\'s try searching a bit more.</string>
    <string name="no_data_favorite">We can\'t see any movies here.\nTry adding some favorite movies.</string>
    <string name="error_search_movies">Error search movies!</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="play_button">Play Button</string>
    <string name="close_page">Close Page</string>
    <string name="download_image">Download Image</string>
    <string name="image_downloading">Image Downloading…</string>
    <string name="downloading_image">Downloading Image</string>
    <string name="downloading_image_from">Downloading image from %1$s</string>
    <string name="no_wifi">No Connection</string>
    <string name="try_again">Try Again</string>
    <string name="no_wifi_context">No Internet Connection!\nPlease check your internet connection.</string>
    <string name="still_no_wifi">No Internet Connection!</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_user_context">This action cannot be undone.\nAre you sure you want to delete the user?</string>
    <string name="jpg">%1$s.jpg</string>
</resources>