<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".ui.fragment.AiRecommendationFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacer_medium"
        android:text="@string/app_name"
        android:textAppearance="?textAppearanceTitleLarge"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewAI"
        app:layout_constraintEnd_toStartOf="@+id/imageViewAI"
        app:layout_constraintTop_toTopOf="@+id/imageViewAI" />

    <ImageView
        android:id="@+id/imageViewAI"
        android:layout_width="@dimen/icon_size_large"
        android:layout_height="@dimen/icon_size_large"
        android:layout_marginTop="@dimen/spacer_medium"
        android:contentDescription="@string/ai_logo"
        android:src="@drawable/ai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitleAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_small"
        android:text="@string/gemini"
        android:textAppearance="?textAppearanceTitleLarge"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewAI"
        app:layout_constraintStart_toEndOf="@+id/imageViewAI"
        app:layout_constraintTop_toTopOf="@+id/imageViewAI" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationViewAI"
        android:layout_width="@dimen/layout_xx_large"
        android:layout_height="@dimen/layout_xx_large"
        android:layout_marginStart="@dimen/spacer_medium"
        android:layout_marginTop="@dimen/spacer_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAI"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ai_anim" />

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey"
        android:textSize="@dimen/text_size_x_large"
        app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationViewAI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lottieAnimationViewAI"
        app:layout_constraintTop_toTopOf="@+id/lottieAnimationViewAI" />

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacer_medium"
        android:text="@string/ai_slogan"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceBodyLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationViewAI" />

    <ImageView
        android:id="@+id/imageViewMovieBoard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/movie_board"
        android:rotation="5"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:src="@drawable/movie_board"
        app:layout_constraintBottom_toTopOf="@+id/cardViewInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacer_large"
        android:layout_marginEnd="@dimen/spacer_large"
        android:layout_marginBottom="@dimen/spacer_medium"
        android:padding="@dimen/spacer_large"
        app:cardBackgroundColor="@color/ai_blue"
        app:cardCornerRadius="@dimen/corner_radius_medium"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/spacer_medium"
            android:text="@string/data_info"
            android:textAlignment="center" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacer_large"
        android:background="@drawable/ai_button_style"
        android:clickable="true"
        android:padding="@dimen/spacer_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewRecommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacer_xx_small"
            android:text="@string/create_recommendation"
            android:textColor="?color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingAnimationView"
            android:layout_width="@dimen/icon_size_medium"
            android:layout_height="@dimen/icon_size_medium"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_anim" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>